--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fire = "^0.1.3"
 PyGithub = "^1.43"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.4"
+flake8 = "^3.6"
 
 [build-system]
 requires = ["poetry>=0.12"]
